# xemurs

./: CONTRIBUTING.md  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/drivers/: Cargo.toml
crates/drivers/src/: error.rs  lib.rs  window.rs
crates/emulator/: Cargo.toml
crates/emulator/src/: lib.rs
crates/emulator/src/cosmac_vip/: cpu.rs  display.rs  keypad.rs  mod.rs  registers.rs
crates/system/: Cargo.toml
crates/system/src/: emulator.rs  error.rs  lib.rs  window.rs
src/: main.rs
