[package]
name = "system"
version = "0.1.0"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
description = "Xemurs Drivers"
repository = "https://github.com/xemurs/system"
keywords = ["emulator"]
license = "MIT"
readme = "README.md"

[dependencies]
sdl2 = "0.35.2"
thiserror = "1.0.40"
